--- a/site-hommage/style.css
+++ b/site-hommage/style.css
@@ -4,6 +4,7 @@
 }
 body{
     font-family: 'Roboto';
+    background-color: cadetblue;
 }
 header{
     display: flex;
@@ -12,7 +13,7 @@ header{
     padding: 15px;
     align-items: center;
     margin-bottom: 18px;
-    background-color:darkgray;
+    background-color:white;
     
 }
 .left {
@@ -24,6 +25,7 @@ header{
     padding: 0 7px;
     cursor: pointer;
    }
+   
 
    .search {
     display: flex;
@@ -85,6 +87,7 @@ header{
   nav{
     display: flex;
     
+    
   }
   
   .liste{
@@ -94,19 +97,20 @@ header{
     padding: 8px;
     font-size: 25px;
     width: 100%;
+    
     }
     .famille{
       font-family: 'Times New Roman', Times, serif;
       font-size: 50px;
       text-align: center;
-      color: crimson;
+      color: white;
       border-radius: 15px;
       
     }
     #forme{
       text-align: center;
       font-size: 25px;
-      background-color: crimson;
+      background-color: white;
       border-radius: 15px;
     }
     aside{
@@ -132,24 +136,26 @@ header{
       #form{
         text-align: center;
       font-size: 25px;
-      background-color: crimson;
+      background-color: white;
       border-radius: 15px;
       }
       #for{
         text-align: center;
       font-size: 25px;
-      background-color: crimson;
+      background-color: white;
       border-radius: 15px;
       }
       #fo{
         text-align: center;
       font-size: 25px;
-      background-color: crimson;
+      background-color: white;
       border-radius: 15px;
       }
       #f{
         text-align: center;
       font-size: 25px;
-      background-color: crimson;
+      background-color: white;
       border-radius: 15px;
       }
+      
+      
